package ub.edu.model.punPas_Strategy.extendClasses;

import ub.edu.model.punPas_Strategy.ValorarPuntPas;

public class ListLikesPuntdePas extends ValorarPuntPas {
    public ListLikesPuntdePas() {

    }
}
