package ub.edu.model.punPas_Strategy.extendClasses;

import ub.edu.model.punPas_Strategy.ValorarPuntPas;

public class ListLikesRutes extends ValorarPuntPas {
    public ListLikesRutes() {
    }
}
