package ub.edu.model.punPas_Strategy.extendClasses;

import ub.edu.model.punPas_Strategy.ValorarPuntPas;
import ub.edu.model.punPas_Strategy.ValorarRuta;

public class PerEstrellesRuta extends ValorarPuntPas{
    public PerEstrellesRuta() throws Exception {
        ivalorar = new ValorarRuta();
    }
}
