package ub.edu.model.punPas_Strategy.extendClasses;

import ub.edu.model.punPas_Strategy.ValorarLikes;
import ub.edu.model.punPas_Strategy.ValorarPuntPas;

public class PerLikes extends ValorarPuntPas {
    public  PerLikes() throws Exception {
        ivalorar = new ValorarLikes();
    }
}
