@startuml

title __EXTENDCLASSES's Class Diagram__\n


    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.ListEstrellesPuntdePas {
                + ListEstrellesPuntdePas()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.ListEstrellesRutes {
                + ListEstrellesRutes()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.ListLikesPuntdePas {
                + ListLikesPuntdePas()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.ListLikesRutes {
                + ListLikesRutes()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.PerDesLike {
                + PerDesLike()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.PerEstrelles {
                + PerEstrelles()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.PerEstrellesRuta {
                + PerEstrellesRuta()
            }
          }
        }
      }
    }

    namespace b.edu {
      namespace model {
        namespace punPas_Strategy {
          namespace extendClasses {
            class ub.edu.model.punPas_Strategy.extendClasses.PerLikes {
                + PerLikes()
            }
          }
        }
      }
    }

  

  ub.edu.model.punPas_Strategy.extendClasses.ListEstrellesPuntdePas -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.ListEstrellesRutes -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.ListLikesPuntdePas -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.ListLikesRutes -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.PerDesLike -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.PerEstrelles -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.PerEstrellesRuta -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas
  ub.edu.model.punPas_Strategy.extendClasses.PerLikes -up-|> ub.edu.model.punPas_Strategy.ValorarPuntPas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
